--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/loadable__component": "^5.10.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "antd": "^4.1.4",
     "babel-loader": "^8.1.0",
@@ -32,6 +33,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-react-hook": "^4.0.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
     "ts-loader": "^7.0.1",
