--- a/.babelrc
+++ b/.babelrc
@@ -13,10 +13,14 @@
     /* react 路由懒加载 */
     "@babel/plugin-syntax-dynamic-import",
     /* antd 按需加载 */
-    ["import", {
-      "libraryName": "antd",
-      "libraryDirectory": "es",
-      "style": "css" // `style: true` 会加载 less 文件
-    }]
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": "css" // `style: true` 会加载 less 文件
+      }
+    ],
+    "react-hot-loader/babel"
   ]
 }
