--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@hot-loader/react-dom": "^16.13.0",
     "@loadable/component": "^5.12.0",
     "@types/loadable__component": "^5.10.0",
     "@types/react": "^16.9.34",
@@ -32,6 +33,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.20",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-react-hook": "^4.0.1",
