--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,24 +16,22 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 2018,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "plugins": [
         "react",
         "@typescript-eslint"
     ],
-    "rules": {
-    },
     "settings": {
         "react": {
           "createClass": "createReactClass", // Regex for Component Factory to use,
                                              // default to "createReactClass"
           "pragma": "React",  // Pragma to use, default to "React"
           "version": "detect", // React version. "detect" automatically picks the version you have installed.
-                               // You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
-                               // default to latest and warns if missing
-                               // It will default to "detect" in the future
+            // You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
+            // default to latest and warns if missing
+            // It will default to "detect" in the future
           "flowVersion": "0.53" // Flow version
         },
         "propWrapperFunctions": [
@@ -44,8 +42,25 @@
         ],
         "linkComponents": [
           // Components used as alternatives to <a> for linking, eg. <Link to={ url } />
-          "Hyperlink",
-          {"name": "Link", "linkAttribute": "to"}
+            "Hyperlink",
+            {"name": "Link", "linkAttribute": "to"}
         ]
-      }
+    },
+    "rules": {
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error",
+        /* 强制使用全等比较 */
+        "eqeqeq": ["error", "always"],
+        /* 不允许扩展原生对象 */
+        "no-extend-native": "error",
+        /* 必须使用驼峰法则 */
+        "camelcase": ["error", {"properties": "always"}],
+        /* 块语句的最大可嵌套深度 */
+        "max-depth": ["error", 4],
+        /* 行的最大长度 */
+        "max-len": ["error", { "code": 80 }],
+        /* 函数定义中最大参数个数 */
+        "max-params": ["error", 3],
+        "linebreak-style": ["off", "windows"]
+    }
 }
