--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./scripts/devolopment.js --devolopment",
-    "build:Prod": "node ./scripts/production.js --production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./scripts/devolopment.js --devolopment --env=devolopment",
+    "build:Prod": "node ./scripts/production.js --production --env=production",
+    "build:Test": "node ./scripts/production.js --production --env=test",
+    "dll": "node ./scripts/dll.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,10 +25,12 @@
     "@types/react-router-dom": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "antd": "^4.1.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.1.0",
     "core-js": "^3.6.5",
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
