--- a/package.json
+++ b/package.json
@@ -4,65 +4,67 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predev": "npm install",
+    "dev": "node ./scripts/devolopment.js --devolopment --env=devolopment",
     "start": "node ./scripts/devolopment.js --devolopment --env=devolopment",
     "build:Prod": "node ./scripts/production.js --production --env=production",
     "build:Test": "node ./scripts/production.js --production --env=test",
     "dll": "node ./scripts/dll.js"
   },
-  "author": "",
+  "author": "hyh",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "@hot-loader/react-dom": "^16.13.0",
-    "@loadable/component": "^5.12.0",
-    "@types/loadable__component": "^5.10.0",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@hot-loader/react-dom": "^16.14.0",
+    "@loadable/component": "^5.14.1",
+    "@types/loadable__component": "^5.13.1",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
-    "antd": "^4.1.4",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-import": "^1.13.0",
+    "antd": "^4.9.2",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.1.0",
-    "core-js": "^3.6.5",
-    "css-loader": "^3.5.2",
+    "core-js": "^3.8.1",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react": "^7.21.5",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.2.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.1",
-    "node-sass": "^4.13.1",
+    "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.5",
+    "lint-staged": "^10.5.3",
+    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.20",
-    "react-router-dom": "^5.1.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-hot-loader": "^4.13.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-react-hook": "^4.0.1",
+    "redux-react-hook": "^4.0.3",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.4",
-    "ts-loader": "^7.0.1",
-    "typescript": "^3.8.3",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-dev-server": "^3.10.3",
-    "yargs": "^15.3.1"
+    "style-loader": "^1.3.0",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.7",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.44.2",
+    "webpack-dev-server": "^3.11.0",
+    "yargs": "^15.4.1"
   },
   "dependencies": {
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.6",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.12"
   },
   "husky": {
     "hooks": {
